--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -1,696 +1,488 @@
-/**
-* ESTILOS PARA O DIV DE JOGOS
-*/
-#GameDiv
-{
-	display			: table;
-	position		: relative;
-	left			: 50%;
-	margin-top		: 35px;
-	margin-right		: 0px;
-	margin-bottom		: 0px;
-	margin-left		: -260px;
+#GameDiv {
+    display: table;
+    position: relative;
+    left: 50%;
+    margin-top: 35px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: -260px;
 }
 
-/**
-* ESTILOS DO TABULEIRO
-*/
-
-#TBoard{
-	position		: relative;
-	float			: left;
-	border			: 3px solid #216778;
-	border-right		: 0px;
+#TBoard {
+    position: relative;
+    float: left;
+    border: 3px solid #216778;
+    border-right: 0px;
 }
 
 #Board {
-	position		: relative;
-	/*
-	height			: 80.5mm;
-	width			: 80.5mm;
-	*/
-	height			: 304px;
-	width			: 304px;
-	display			: table;
+    position: relative;
+    height: 304px;
+    width: 304px;
+    display: table;
 }
 
-#Board div{
-	float			: left;
+#Board div {
+    float: left;
 }
 
 #Board .black {
-	background-image	: url('~images/board/square_black.png');
+    background-image: url('~images/board/square_black.png');
 }
 
 #Board .white {
-	background-image	: url('~images/board/square_white.png');
+    background-image: url('~images/board/square_white.png');
 }
 
 #Board .select {
-	background-image	: url('~images/board/square_select.png');
+    background-image: url('~images/board/square_select.png');
 }
-
-/*#Board div:hover {
-	background-image	: url('~images/board/square_select.png');
-}*/
 
 #Board div:hover {
-	background-image	: url('~images/board/square_select.png');
+    background-image: url('~images/board/square_select.png');
 }
 
-
-#BoardPiece{
-	position		: static;
+#BoardPiece {
+    position: static;
 }
 
-/**
-* ESTILOS PARA OS INDICES DO TABULEIRO
-*/
 #IndexV {
-	position		: absolute;
-	/*
-	top			: 1mm;
-	left			: -8mm;
-	*/
-	top			: 0px;
-	left			: -35px;
-	margin-left		: 0px;
-	list-style		: none;
+    position: absolute;
+    top: 0px;
+    left: -35px;
+    margin-left: 0px;
+    list-style: none;
 }
- 
+
 #IndexV li {
-	font-size		: 18px;
-	color			: #216778;
-	width			: 15px;
-	height			: 38px;
-	line-height		: 38px;
-
-	text-align		: center;
+    font-size: 18px;
+    color: #216778;
+    width: 15px;
+    height: 38px;
+    line-height: 38px;
+    text-align: center;
 }
-
 
 #IndexH {
-	list-style		: none;
-	/*
-	position		: absolute;
-	top			: 80mm;
-	*/
-	left			: 0px;
-	top			: 309px;
-	position		: absolute;
-	width			: 305px;
-	/*width			: 81mm;*/
+    list-style: none;
+    left: 0px;
+    top: 309px;
+    position: absolute;
+    width: 305px;
 }
 
 #IndexH li {
-	list-style		: none;
-	float			: left;
-	font-size		: 18px;
-	color			: #216778;
-	width			: 38px;
-	height			: 38px;
-	text-align		: center;
+    list-style: none;
+    float: left;
+    font-size: 18px;
+    color: #216778;
+    width: 38px;
+    height: 38px;
+    text-align: center;
 }
 
-/*
- * GAMINFO STYLES
- */
-
-#GameInfoDiv
-{
-	position		: relative;
-	width			: 177px;
-	height			: 304px;
-	float			: left;
-	border			: 3px solid #216778;
-	padding			: 0px 8px;
-	background-color : #dff0ef;
+#GameInfoDiv {
+    position: relative;
+    width: 177px;
+    height: 304px;
+    float: left;
+    border: 3px solid #216778;
+    padding: 0px 8px;
+    background-color: #dff0ef;
 }
 
 #GameClose {
-	position		: absolute;
-	right			: -3px;
-	/*top			: -5mm;*/
-	top			: -18px;
-	/*width			: 4mm;*/
-	width			: 16px;
-	font-weight		: bold;
-	font-size		: 10px;
-	text-align		: center;
-	background-color	: #216778;
-	color			: #FFF;
-	padding			: 2px;
-	cursor			: pointer;
-	height			: 12px;
+    position: absolute;
+    right: -3px;
+    top: -18px;
+    width: 16px;
+    font-weight: bold;
+    font-size: 10px;
+    text-align: center;
+    background-color: #216778;
+    color: #FFF;
+    padding: 2px;
+    cursor: pointer;
+    height: 12px;
 }
 
-#PhotoDiv
-{
-	position		: relative;
-	/*width			: 53mm;*/
-	/*width			: 170px;*/
-	/*height		: 30mm;*/
-	/*height			: 95px;;*/
-	font-size		: 14px;
-	color			: #216778;
-
-	padding-top		: 7px;
-	padding-right		: 0px;
-	padding-bottom		: 7px;
-	padding-left		: 0px;
+#PhotoDiv {
+    position: relative;
+    font-size: 14px;
+    color: #216778;
+    padding-top: 7px;
+    padding-right: 0px;
+    padding-bottom: 7px;
+    padding-left: 0px;
 }
 
-#PhotoDiv #PWPhoto,
-#PhotoDiv #PBPhoto
-{
-	background-color	: #fff;
-	
-	/*
-	position		: absolute;
-	left			: 8mm;
-	top			: 5mm;
-	float			: left;
-	*/
-	width			: 50px;
-	height			: 60px;
-	border-style		: solid;
-	border-width		: 1px;
-
-	display			: inline-table;	
-
-	margin			: 0px 14px;
-	background-position: center center;
-	background-size: cover;
+#PhotoDiv #PWPhoto, #PhotoDiv #PBPhoto {
+    background-color: #fff;
+    width: 50px;
+    height: 60px;
+    border-style: solid;
+    border-width: 1px;
+    display: inline-table;
+    margin: 0px 14px;
+    background-position: center center;
+    background-size: cover;
 }
 
-
-#PhotoDiv #PWName,
-#PhotoDiv #PBName
-{
-	position		: relative;
-	display			: inline-table;
-	width			: 88px;
-	text-align		: center;
+#PhotoDiv #PWName, #PhotoDiv #PBName {
+    position: relative;
+    display: inline-table;
+    width: 88px;
+    text-align: center;
 }
 
-#PhotoDiv #PWPawn
-{
-	background-image	: url("~images/pieces/wpawn.png");
-
-	position		: absolute;
-	/*
-	top			: 13.5mm;
-	left			: 3.5mm;
-	*/
-	top			: 40px;
-	left			: -5px;
-
-	width			: 35px;
-	height			: 35px;
-}
-#PhotoDiv #PBPawn
-{
-	background-image	: url("~images/pieces/bpawn.png");
-
-	position		: absolute;
-	/*
-	top			: 13.5mm;
-	right			: 3.5mm;
-	*/
-	top			: 40px;
-	right			: -5px;
-
-	width			: 35px;
-	height			: 35px;
+#PhotoDiv #PWPawn {
+    background-image: url("~images/pieces/wpawn.png");
+    position: absolute;
+    top: 40px;
+    left: -5px;
+    width: 35px;
+    height: 35px;
 }
 
-#PhotoDiv #vs
-{
-	position		: relative;
-	/*
-	right			: 50%;
-	left			: 50%;
-	top			: 40mm;
-	top			: 20px;
-	float			: left;
-	*/
-	display			: inline-table;
-
-	margin-left		: 5px;
-	margin-right		: 5px;
-	margin-top		: 0px;
-	margin-bottom		: 0px;
+#PhotoDiv #PBPawn {
+    background-image: url("~images/pieces/bpawn.png");
+    position: absolute;
+    top: 40px;
+    right: -5px;
+    width: 35px;
+    height: 35px;
 }
 
-/*Timers*/
-#TimerDiv
-{
-
-	position		: relative;
-/*
-	padding			: 5px 0px;
-	width			: 180px;
-	height			: 35px;
-	width			: 53mm;
-	height			: 10mm;
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #216778;
-*/
-	font-size		: 14px;
-	font-weight		: bold;
-	color			: #216778;
+#PhotoDiv #vs {
+    position: relative;
+    display: inline-table;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
-#PWTimer, #PBTimer
-{
-	background-color	: #ffeed1;
-	/*width			: 15mm;*/
-	width			: 60px;
-
-/*	position		: absolute;*/
-/*	left			: 6.5mm;*/
-/*	top			: 1mm;*/
-
-	text-align		: center;
-	display			: inline-table;
-
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #ffa200;
-
-/*	float			: left;*/
-
-	margin			: 0px 13px;
-}
-/*
-#PBTimer
-{
-	background-color	: #ffeed1;
-
-	width			: 15mm;
-
-	position		: absolute;
-/*	right			: 6.5mm;*/
-/*	top			: 1mm;*/
-/*
-	text-align		: center;
-
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #ffa200;
-}
-*/
-/*GameOptions*/
-#GameOptionDiv, #MoveListDiv
-{
-	background-color	: #FFF;
-	
-	position		: absolute;
-	/*top			: 5mm;*/
-	top			: 19px;
-	left			: -1px;
-
-	/*width			: 46mm;*/
-	width			: 175px;
-	/*height		: 30mm;*/
-	height			: 115px;
-
-	border-style		: solid;
-	border-width		: 0px 1px 1px 1px;
-	border-color		: #216778;
-
-	font-size		: 11px;
-	color			: #216778;
+#TimerDiv {
+    position: relative;
+    font-size: 14px;
+    font-weight: bold;
+    color: #216778;
 }
 
-#MoveListDiv{
-	position		: relative;
-	height			: 115px;
-	width			: 175px;
+#PWTimer, #PBTimer {
+    background-color: #ffeed1;
+    width: 60px;
+    text-align: center;
+    display: inline-table;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ffa200;
+    margin: 0px 13px;
 }
 
-#MoveList{
-	list-style		: none;
-	/*height		: 30mm;*/
-	height			: 115px;
-	overflow		: auto;
-
-	font-weight		: normal;
+#GameOptionDiv, #MoveListDiv {
+    background-color: #FFF;
+    position: absolute;
+    top: 19px;
+    left: -1px;
+    width: 175px;
+    height: 115px;
+    border-style: solid;
+    border-width: 0px 1px 1px 1px;
+    border-color: #216778;
+    font-size: 11px;
+    color: #216778;
 }
 
-#MoveList.oldgame{
-	/*height			: 22mm;*/
-	height			: 85px;
-	width			: 175px;
+#MoveListDiv {
+    position: relative;
+    height: 115px;
+    width: 175px;
 }
 
-#MoveList li{
-	/*width			: 151px;*/
-	padding			: 0px 12px;
-	height			: 15px;
-}
-#MoveList li.black{
-	background-color	: #216778;
-	color			: #FFF;
+#MoveList {
+    list-style: none;
+    height: 115px;
+    overflow: auto;
+    font-weight: normal;
 }
 
-#MoveList p{
-	float			: left;
-	width			: 30px;
+#MoveList.oldgame {
+    height: 85px;
+    width: 175px;
 }
 
-#MoveList p.move{
-	width			: 52px
+#MoveList li {
+    padding: 0px 12px;
+    height: 15px;
 }
 
-#MoveListDiv #MoveListButtons{
-	position                : absolute;
-	bottom                  : 0px;
-
-	background-color        : #FFF;
-
-	display                 : table;
-	/*width                   : 45.9mm;*/
-	width			: 175px;
-	/*height                  : 8mm;*/
-	height			: 28px;
-
-	border-style            : solid;
-	border-width            : 1px 0px 0px 0px;
+#MoveList li.black {
+    background-color: #216778;
+    color: #FFF;
 }
 
-#MoveListDiv #MoveListButtons input{
-	float                   : left;
-	/*
-	margin-left             : 6mm;
-	margin-top              : 2mm;
-	*/
-	margin-left		: 23px;
-	margin-top		: 7px;
-	border			: none;
-	width			: 14px;
-	height			: 15px;
-	cursor			: pointer;
+#MoveList p {
+    float: left;
+    width: 30px;
 }
 
-#GameOptionDiv ul
-{
-	position		: relative;
-	top			: 1mm;
-	left			: 2mm;
-	bottom			: 1mm;
-	list-style		: none;
-
-	font-weight		: normal;
+#MoveList p.move {
+    width: 52px;
 }
 
-#GameOptionDiv li
-{
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #FFF;
+#MoveListDiv #MoveListButtons {
+    position: absolute;
+    bottom: 0px;
+    background-color: #FFF;
+    display: table;
+    width: 175px;
+    height: 28px;
+    border-style: solid;
+    border-width: 1px 0px 0px 0px;
+}
 
-	width			: 41mm;
-	cursor			: pointer;
+#MoveListDiv #MoveListButtons input {
+    float: left;
+    margin-left: 23px;
+    margin-top: 7px;
+    border: none;
+    width: 14px;
+    height: 15px;
+    cursor: pointer;
+}
+
+#GameOptionDiv ul {
+    position: relative;
+    top: 1mm;
+    left: 2mm;
+    bottom: 1mm;
+    list-style: none;
+    font-weight: normal;
+}
+
+#GameOptionDiv li {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #FFF;
+    width: 41mm;
+    cursor: pointer;
 }
 
 #GameOptionDiv .press {
-	background-color: #FFF;
+    background-color: #FFF;
 }
 
 #GameOptionDiv .release {
-	background-color: #DAF3F5;
+    background-color: #DAF3F5;
 }
 
-#GameOptionDiv li.promotion
-{
-	width			: 44mm;
-	border-style		: solid;
-	border-color		: #fff;
-	border-width		: 0px;
+#GameOptionDiv li.promotion {
+    width: 44mm;
+    border-style: solid;
+    border-color: #fff;
+    border-width: 0px;
 }
 
-#GameOptionDiv li.promotion:hover
-{	
-	border-style		: solid;
-	border-color		: #fff;
-	border-width		: 0px;
+#GameOptionDiv li.promotion:hover {
+    border-style: solid;
+    border-color: #fff;
+    border-width: 0px;
 }
 
-#GameOptionDiv select
-{
-	margin-left		: 2px;
-
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #216778;
-
-	font-size		: 10px;
-	color			: #216778;
-	width			: 15mm;
-
-	position		: absolute;
-	bottom			: -2px;
+#GameOptionDiv select {
+    margin-left: 2px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #216778;
+    font-size: 10px;
+    color: #216778;
+    width: 15mm;
+    position: absolute;
+    bottom: -2px;
 }
 
-/*GameTabs*/
-
-#GameInfoTab
-{
-	position		: relative;
-/*
-	left			: 2mm;
-	right			: 2mm;
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #216778;
-*/
+#GameInfoTab {
+    position: relative;
 }
 
-#InfoTab
-{
-	position		: relative;
-	top			: 0px;
-	left			: 0px;
-
-	/*width			: 46mm;*/
-	width			: 175px;
-	height			: 18px;
-
-	font-size		: 12px;
-	font-weight		: bold;
-	color			: #216778;
-
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #216778;
+#InfoTab {
+    position: relative;
+    top: 0px;
+    left: 0px;
+    width: 175px;
+    height: 18px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #216778;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #216778;
 }
 
-#InfoTab1
-{
-	position		: absolute;
-	left			: -1px;
-	top			: -1px;
-
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #216778;
-
-	/*width			: 23mm;*/
-	width			: 86px;
-	/*height		: 4.7mm;*/
-	height			: 18px;
-
-	text-align		: center;
-	cursor			: pointer;
+#InfoTab1 {
+    position: absolute;
+    left: -1px;
+    top: -1px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #216778;
+    width: 86px;
+    height: 18px;
+    text-align: center;
+    cursor: pointer;
 }
 
-#InfoTab2
-{
-	position		: absolute;
-	right			: -1px;
-	top			: -1px;
-
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #216778;
-
-	/*width			: 22.5mm;*/
-	width			: 88px;
-	/*height		: 4.7mm;*/
-	height			: 18px;
-
-	text-align		: center;
-	cursor			: pointer;
+#InfoTab2 {
+    position: absolute;
+    right: -1px;
+    top: -1px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #216778;
+    width: 88px;
+    height: 18px;
+    text-align: center;
+    cursor: pointer;
 }
 
-#InfoTab1.active, #InfoTab2.active
-{
-	background-color	: #ffeed1;
-
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #ffa200;
-
-	color			: #ffa200;
+#InfoTab1.active, #InfoTab2.active {
+    background-color: #ffeed1;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ffa200;
+    color: #ffa200;
 }
 
-#InfoTab1.oldgame{
-	/*width			: 46mm;*/
-	width			: 175px;
+#InfoTab1.oldgame {
+    width: 175px;
 }
 
-
-/*Move List Buttons*/
-#MoveListFirst{
-	background-image	: url("~images/board/first.png");
+#MoveListFirst {
+    background-image: url("~images/board/first.png");
 }
 
 #MoveListFirst:hover {
-	background-image	: url("~images/board/first_active.png");
+    background-image: url("~images/board/first_active.png");
 }
 
-#MoveListPrev{
-	background-image	: url("~images/board/prev.png");
+#MoveListPrev {
+    background-image: url("~images/board/prev.png");
 }
 
 #MoveListPrev:hover {
-	background-image	: url("~images/board/prev_active.png");
+    background-image: url("~images/board/prev_active.png");
 }
 
-#MoveListNext{
-	background-image	: url("~images/board/next.png");
+#MoveListNext {
+    background-image: url("~images/board/next.png");
 }
 
 #MoveListNext:hover {
-	background-image	: url("~images/board/next_active.png");
+    background-image: url("~images/board/next_active.png");
 }
 
-#MoveListLast{
-	background-image	: url("~images/board/last.png");
+#MoveListLast {
+    background-image: url("~images/board/last.png");
 }
 
 #MoveListLast:hover {
-	background-image	: url("~images/board/last_active.png");
+    background-image: url("~images/board/last_active.png");
 }
 
-#GameLoadingMove
-{
-	width			: 160px;
-	height			: 17px;
-
-	background-color	: #FFF;
-
-	font-size		: 12px;
-	color			: #216778;
-
-	position		: fixed;
-	bottom			: 10px;
-	left			: 50%;
-	margin-left		: -50px;
-
-	padding			: 2px 15px;
-
-	border			: 1px solid #216778;
+#GameLoadingMove {
+    width: 160px;
+    height: 17px;
+    background-color: #FFF;
+    font-size: 12px;
+    color: #216778;
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    margin-left: -50px;
+    padding: 2px 15px;
+    border: 1px solid #216778;
 }
 
-#GameLeaveUser
-{
-	width			: 345px;
-	height			: 30px;
-
-	background-color	: #FFF;
-
-	font-size		: 12px;
-	color			: #216778;
-
-	position		: fixed;
-	bottom			: 30px;
-	left			: 50%;
-	margin-left		: -135px;
-
-	padding			: 2px 15px;
-
-	border			: 1px solid #216778;
-	text-align		: center;
+#GameLeaveUser {
+    width: 345px;
+    height: 30px;
+    background-color: #FFF;
+    font-size: 12px;
+    color: #216778;
+    position: fixed;
+    bottom: 30px;
+    left: 50%;
+    margin-left: -135px;
+    padding: 2px 15px;
+    border: 1px solid #216778;
+    text-align: center;
 }
 
-#BlockBoard
-{
-	border			: 2px solid #FFA200;
+#BlockBoard {
+    border: 2px solid #FFA200;
 }
 
-/*CAPTURE LISTS*/
-
-#CapturedDiv
-{
-	padding			: 5px 0px;
-	position		: relative;
-	height			: 35px;
+#CapturedDiv {
+    padding: 5px 0px;
+    position: relative;
+    height: 35px;
 }
 
-/*#PWCapturedList,
-#PBCapturedList*/
-#CapturedDiv ul
-{
-	width			: 87px;
-	height			: 35px;
-	position		: relative;
-	list-style		: none;
-	float			: left;
+#CapturedDiv ul {
+    width: 87px;
+    height: 35px;
+    position: relative;
+    list-style: none;
+    float: left;
 }
 
-#CapturedDiv li
-{
-	width			: 10px;
-	height			: 14px;
-	margin			: 1px;
-	float			: left;
+#CapturedDiv li {
+    width: 10px;
+    height: 14px;
+    margin: 1px;
+    float: left;
 }
 
-#CapturedDiv #Wpawn
-{
-	background-image	: url("~images/pieces/mini_wpawn.png");
-	height			: 12px;
-}
-#CapturedDiv #Wknight
-{
-	background-image	: url("~images/pieces/mini_wknight.png");
-}
-#CapturedDiv #Wbishop
-{
-	background-image	: url("~images/pieces/mini_wbishop.png");
-}
-#CapturedDiv #Wrook
-{
-	background-image	: url("~images/pieces/mini_wrook.png");
-}
-#CapturedDiv #Wqueen
-{
-	background-image	: url("~images/pieces/mini_wqueen.png");
+#CapturedDiv #Wpawn {
+    background-image: url("~images/pieces/mini_wpawn.png");
+    height: 12px;
 }
 
-#CapturedDiv #Bpawn
-{
-	background-image	: url("~images/pieces/mini_bpawn.png");
-	height			: 13px;
-}
-#CapturedDiv #Bknight
-{
-	background-image	: url("~images/pieces/mini_bknight.png");
-}
-#CapturedDiv #Bbishop
-{
-	background-image	: url("~images/pieces/mini_bbishop.png");
-}
-#CapturedDiv #Brook
-{
-	background-image	: url("~images/pieces/mini_brook.png");
-}
-#CapturedDiv #Bqueen
-{
-	background-image	: url("~images/pieces/mini_bqueen.png");
+#CapturedDiv #Wknight {
+    background-image: url("~images/pieces/mini_wknight.png");
 }
 
+#CapturedDiv #Wbishop {
+    background-image: url("~images/pieces/mini_wbishop.png");
+}
+
+#CapturedDiv #Wrook {
+    background-image: url("~images/pieces/mini_wrook.png");
+}
+
+#CapturedDiv #Wqueen {
+    background-image: url("~images/pieces/mini_wqueen.png");
+}
+
+#CapturedDiv #Bpawn {
+    background-image: url("~images/pieces/mini_bpawn.png");
+    height: 13px;
+}
+
+#CapturedDiv #Bknight {
+    background-image: url("~images/pieces/mini_bknight.png");
+}
+
+#CapturedDiv #Bbishop {
+    background-image: url("~images/pieces/mini_bbishop.png");
+}
+
+#CapturedDiv #Brook {
+    background-image: url("~images/pieces/mini_brook.png");
+}
+
+#CapturedDiv #Bqueen {
+    background-image: url("~images/pieces/mini_bqueen.png");
+}
 
