--- a/src/css/ChallengeMenu.css
+++ b/src/css/ChallengeMenu.css
@@ -1,193 +1,161 @@
-#ChallengeMenu
-{
-	font-size	: 11px;
-	color		: #216778;
-	border-style	: solid;
-	border-width	: 2px;
-	border-color	: #216778;
-
-	width		: 265px;
-	height		: 270px;
-
-	overflow-y	: auto;
-	overflow-x	: hidden;
-
-	padding		: 10px;
-	background-color: #ffffff;
-
-	position	: absolute;
+#ChallengeMenu {
+    font-size: 11px;
+    color: #216778;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #216778;
+    width: 265px;
+    height: 270px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 10px;
+    background-color: #ffffff;
+    position: absolute;
 }
 
-
-#ChallengeMenu ul
-{
-	list-style	: none;
-	padding		: 0px;
-	margin-top	: 3px;
-	margin-bottom	: 5px;
-
-	border-bottom	: 1px solid #FFA200;
+#ChallengeMenu ul {
+    list-style: none;
+    padding: 0px;
+    margin-top: 3px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #FFA200;
 }
 
-#ChallengeMenu ul #title
-{
-	font-weight	: bold;
+#ChallengeMenu ul #title {
+    font-weight: bold;
 }
 
-#ChallengeMenu ul #announce 
-{
-	font-style	: italic;
-
-	border-bottom	: 1px solid #216778;
-
-	cursor		: pointer;
+#ChallengeMenu ul #announce {
+    font-style: italic;
+    border-bottom: 1px solid #216778;
+    cursor: pointer;
 }
 
 #ChallengeMenu ul #announce:hover {
-	color : #FFA200;
-	border-bottom	: 1px solid #FFA200;
+    color: #FFA200;
+    border-bottom: 1px solid #FFA200;
 }
 
-#ChallengeMenu li
-{
-	margin-top	: 5px;
-
-	padding-left	: 20px;
-	padding-top	: 5px;
-	display		: block;
-	height		: 20px;
-	width		: 250px;
+#ChallengeMenu li {
+    margin-top: 5px;
+    padding-left: 20px;
+    padding-top: 5px;
+    display: block;
+    height: 20px;
+    width: 250px;
 }
 
-#ChallengeMenu li:hover
-{
-	background-color: #D4F3F5;
+#ChallengeMenu li:hover {
+    background-color: #D4F3F5;
 }
 
-#ChallengeMenu li.offline
-{
-	color		: #777777;
-	background-image: url('~images/challenge_menu/disable.png');
-	background-repeat: no-repeat;
+#ChallengeMenu li.offline {
+    color: #777777;
+    background-image: url('~images/challenge_menu/disable.png');
+    background-repeat: no-repeat;
 }
 
-#ChallengeMenu li.undefined
-{
-	background-image: url('~images/challenge_menu/disable.png');
-	background-repeat: no-repeat;
+#ChallengeMenu li.undefined {
+    background-image: url('~images/challenge_menu/disable.png');
+    background-repeat: no-repeat;
 }
 
-#ChallengeMenu li.random
-{
-	background-image: url('~images/random.png');
-	background-repeat: no-repeat;
+#ChallengeMenu li.random {
+    background-image: url('~images/random.png');
+    background-repeat: no-repeat;
 }
 
-#ChallengeMenu li.white
-{
-	background-image: url('~images/invite_white_pawn.png');
-	background-repeat: no-repeat;
+#ChallengeMenu li.white {
+    background-image: url('~images/invite_white_pawn.png');
+    background-repeat: no-repeat;
 }
 
-#ChallengeMenu li.black
-{
-	background-image: url('~images/invite_black_pawn.png');
-	background-repeat: no-repeat;
+#ChallengeMenu li.black {
+    background-image: url('~images/invite_black_pawn.png');
+    background-repeat: no-repeat;
 }
 
-#ChallengeMenu p
-{
-	margin		: 0px;
-	padding		: 0px;
-	float		: left;
+#ChallengeMenu p {
+    margin: 0px;
+    padding: 0px;
+    float: left;
 }
 
-#ChallengeMenu li #name
-{
-	width		: 70px;
+#ChallengeMenu li #name {
+    width: 70px;
 }
 
-#ChallengeMenu li #time
-{
-	width		: 30px;
+#ChallengeMenu li #time {
+    width: 30px;
 }
 
-#ChallengeMenu li #inc
-{
-	width		: 30px;
+#ChallengeMenu li #inc {
+    width: 30px;
 }
 
-#ChallengeMenu li #rated
-{
-	font-style	: italic;
-	width		: 40px;
+#ChallengeMenu li #rated {
+    font-style: italic;
+    width: 40px;
 }
+
 #ChallengeMenu li #rated.false {
-	color		: #777777;
+    color: #777777;
 }
 
 #ChallengeMenu li #rated.true {
-	color		: #216778;
+    color: #216778;
 }
 
-#ChallengeMenu li #private
-{
-	width		: 30px;
-	height		: 12px;
-}
-#ChallengeMenu li #private.true
-{
-	background-image: url('~images/challenge_menu/observer.png');
-	background-repeat: no-repeat;
+#ChallengeMenu li #private {
+    width: 30px;
+    height: 12px;
 }
 
-#ChallengeMenu li #private.false
-{
-	background-image: url('~images/challenge_menu/observer_disable.png');
-	background-repeat: no-repeat;
+#ChallengeMenu li #private.true {
+    background-image: url('~images/challenge_menu/observer.png');
+    background-repeat: no-repeat;
 }
 
-#ChallengeMenu li #button
-{
-	width	: 50px;
-	font-style : italic;
-	font-size : 9px;
-	cursor		: pointer;
+#ChallengeMenu li #private.false {
+    background-image: url('~images/challenge_menu/observer_disable.png');
+    background-repeat: no-repeat;
 }
 
-#ChallengeMenu li #button.active
-{
-	border-bottom : 1px solid #216778;
-	color : #216678;
+#ChallengeMenu li #button {
+    width: 50px;
+    font-style: italic;
+    font-size: 9px;
+    cursor: pointer;
 }
 
-#ChallengeMenu li #button.over
-{
-	color : #FFA200;
-	border-bottom : 1px solid #FFA200;
-	cursor		: pointer;
+#ChallengeMenu li #button.active {
+    border-bottom: 1px solid #216778;
+    color: #216678;
 }
 
-#ChallengeMenu li #button.out
-{
-	color : #216778;
-	border-bottom : 1px solid #216778;
-	cursor		: pointer;
+#ChallengeMenu li #button.over {
+    color: #FFA200;
+    border-bottom: 1px solid #FFA200;
+    cursor: pointer;
 }
 
-#ChallengeMenu li #button.inactive
-{
-	color : #777777;
-	border-bottom : 1px solid #777777;
-	cursor		: default;
+#ChallengeMenu li #button.out {
+    color: #216778;
+    border-bottom: 1px solid #216778;
+    cursor: pointer;
 }
 
-#ChallengeMenu li #date
-{
-	width		: 71px;
+#ChallengeMenu li #button.inactive {
+    color: #777777;
+    border-bottom: 1px solid #777777;
+    cursor: default;
 }
 
-#ChallengeMenu li #category
-{
-	width		: 58px;
+#ChallengeMenu li #date {
+    width: 71px;
 }
+
+#ChallengeMenu li #category {
+    width: 58px;
+}
+
