--- a/src/css/Oldgame.css
+++ b/src/css/Oldgame.css
@@ -1,242 +1,223 @@
-/*
- * OLDGAME CSS
- */
-
-/* HTML Elements */
 #OldGamesDiv img {
-	margin-right	: 20px;
-	margin-left		: 0px;
+    margin-right: 20px;
+    margin-left: 0px;
 }
 
 #OldGamesDiv p {
-	font-weight		: bold;
-	color			: #216778;
+    font-weight: bold;
+    color: #216778;
 }
 
 #OldGamesDiv span {
-	font-weight		: bold;
-	font-size		: 10px;
-	color			: #216778;
-	padding-right	:	4px;
+    font-weight: bold;
+    font-size: 10px;
+    color: #216778;
+    padding-right: 4px;
 }
 
 #OldGamesDiv input {
-	margin-right	:	4px;
-	margin-top		:	4px;
-	padding-left	:	2px;
+    margin-right: 4px;
+    margin-top: 4px;
+    padding-left: 2px;
 }
 
-#OldGamesDiv input,
-#OldGamesDiv select {
-	border-color : #FFA200;
+#OldGamesDiv input, #OldGamesDiv select {
+    border-color: #FFA200;
 }
 
 #OldGamesDiv input.button {
-	width : 80px;
+    width: 80px;
 }
 
-#OldGamesDiv #L2RightDiv #FromDiv span,
-#OldGamesDiv #L2RightDiv #ToDiv span {
-	font-size : 11px;
+#OldGamesDiv #L2RightDiv #FromDiv span, #OldGamesDiv #L2RightDiv #ToDiv span {
+    font-size: 11px;
 }
 
 #OldGamesDiv #ResultDiv p {
-	font-weight:	normal;
-} 
+    font-weight: normal;
+}
 
 #OldGamesDiv #ResultDiv table {
-	border: 1px solid #216678;
-	width : 480px;
-	text-align : center;
+    border: 1px solid #216678;
+    width: 480px;
+    text-align: center;
 }
 
 #OldGamesDiv thead td {
-	background-color: #DAF3F5;
-	font-size	:	12px;
-	border-bottom	: 1px solid #216778; 
+    background-color: #DAF3F5;
+    font-size: 12px;
+    border-bottom: 1px solid #216778;
 }
 
-#OldGamesDiv tbody,
-#OldGamesDiv thead,
-#OldGamesDiv tfoot,
-#OldGamesDiv table {
-	border-collapse	: collapse;
-	empty-cells		: show;
-	font-weight : bold;
-	width : 478px;
+#OldGamesDiv tbody, #OldGamesDiv thead, #OldGamesDiv tfoot, #OldGamesDiv table {
+    border-collapse: collapse;
+    empty-cells: show;
+    font-weight: bold;
+    width: 478px;
 }
 
 #OldGamesDiv #ResultDiv hr {
-	color : #FFA200;
-	background-color : #FFA200;
-	margin : 0px 10px 10px;
-	height : 1px;
-	border : 0px;
+    color: #FFA200;
+    background-color: #FFA200;
+    margin: 0px 10px 10px;
+    height: 1px;
+    border: 0px;
 }
 
 #OldGamesDiv td {
-	font-size		: 10px;
-	color			: #216778;
-	background-color: #FFF;
-	height : 30px;
-	width : 76px;
-	font-weight		: bold;
+    font-size: 10px;
+    color: #216778;
+    background-color: #FFF;
+    height: 30px;
+    width: 76px;
+    font-weight: bold;
 }
 
-/* Class */
 #OldGamesDiv .left_div {
-	float	:	left;
-	width	:	170px;
+    float: left;
+    width: 170px;
 }
 
 #OldGamesDiv .italic {
-	font-style		: italic;
+    font-style: italic;
 }
 
 #OldGamesDiv .radio {
-	border : 0px none;
+    border: 0px none;
 }
 
-#OldGamesDiv #L2RightDiv #FromDiv .format,
-#OldGamesDiv #L2RightDiv #ToDiv .format {
-	font-size : 9px;
-	font-weight: normal;
+#OldGamesDiv #L2RightDiv #FromDiv .format, #OldGamesDiv #L2RightDiv #ToDiv .format {
+    font-size: 9px;
+    font-weight: normal;
 }
 
 #OldGamesDiv #ResultDiv .result {
-	text-align	:	left;
-	margin-bottom	: 15px;
-	padding-left : 25px;
+    text-align: left;
+    margin-bottom: 15px;
+    padding-left: 25px;
 }
 
-#OldGamesDiv #ResultDiv #TBodyDiv .resulttd, 
-#OldGamesDiv #ResultDiv #TBodyDiv .result_header {
-	width: auto;
+#OldGamesDiv #ResultDiv #TBodyDiv .resulttd, #OldGamesDiv #ResultDiv #TBodyDiv .result_header {
+    width: auto;
 }
 
-#OldGamesDiv #ResultDiv #TBodyDiv .header_examine,
-#OldGamesDiv #ResultDiv #TBodyDiv .examine {
-	width : 50px;
+#OldGamesDiv #ResultDiv #TBodyDiv .header_examine, #OldGamesDiv #ResultDiv #TBodyDiv .examine {
+    width: 50px;
 }
 
 #OldGamesDiv #ResultDiv #TBodyDiv .examine_text {
-	border-bottom: 1px solid #216778;
-	cursor : pointer;
-	text-align: center;
-	padding-right : 0px;
-	font-style : italic;
-	font-size : 9px;
+    border-bottom: 1px solid #216778;
+    cursor: pointer;
+    text-align: center;
+    padding-right: 0px;
+    font-style: italic;
+    font-size: 9px;
 }
 
 #OldGamesDiv #ResultDiv #TBodyDiv .examine_icon {
-	margin : 0px;
-	padding : 3px;
-	cursor: pointer;
+    margin: 0px;
+    padding: 3px;
+    cursor: pointer;
 }
 
 #OldGamesDiv #ResultDiv .tfoot_td {
-	padding-bottom : 10px;
+    padding-bottom: 10px;
 }
 
 #OldGamesDiv #ResultDiv .page {
-	margin-left : 11px;
-	margin-right : 11px;
-	font-size: 9px;
-	font-weight: normal;
+    margin-left: 11px;
+    margin-right: 11px;
+    font-size: 9px;
+    font-weight: normal;
 }
 
 #OldGamesDiv #ResultDiv .button {
-	bottom: 0px;
-	font-size: 9px;
-	font-weight: normal;
-	margin: 0px;
-	width: 60px;
-	border-color : #DAF3F5;
-	padding : 0px;
+    bottom: 0px;
+    font-size: 9px;
+    font-weight: normal;
+    margin: 0px;
+    width: 60px;
+    border-color: #DAF3F5;
+    padding: 0px;
 }
 
 #OldGamesDiv #ResultDiv .button_disabled {
-	border-color : #C0C0C0;
-	background-color: #C0C0C0;
-	color : #FFF;
-	font-size: 9px;
-	font-weight: normal;
-	margin: 0px;
-	width: 60px;
-	padding : 0px;
-	bottom : 0px;
+    border-color: #C0C0C0;
+    background-color: #C0C0C0;
+    color: #FFF;
+    font-size: 9px;
+    font-weight: normal;
+    margin: 0px;
+    width: 60px;
+    padding: 0px;
+    bottom: 0px;
 }
 
-/* ID */
 #OldGamesDiv #FormDiv {
-	padding-top	: 22px;
-	height : 120px;
-	display : block;
+    padding-top: 22px;
+    height: 120px;
+    display: block;
 }
 
 #OldGamesDiv #Layer1Div {
-	margin-bottom	:	7px;
-	padding-left : 83px;
+    margin-bottom: 7px;
+    padding-left: 83px;
 }
 
 #OldGamesDiv #Layer2Div {
-	padding-top : 10px;
-	padding-left : 83px;
+    padding-top: 10px;
+    padding-left: 83px;
 }
 
-#OldGamesDiv #L2RightDiv #FromDiv,  
-#OldGamesDiv #L2RightDiv #FromDiv #FromLeftDiv,
-#OldGamesDiv #L2RightDiv #FromDiv #FromRightDiv,
-#OldGamesDiv #L2RightDiv #ToDiv,  
-#OldGamesDiv #L2RightDiv #ToDiv #ToLeftDiv,
-#OldGamesDiv #L2RightDiv #ToDiv #ToRightDiv {
-	float: left;
+#OldGamesDiv #L2RightDiv #FromDiv, #OldGamesDiv #L2RightDiv #FromDiv #FromLeftDiv, #OldGamesDiv #L2RightDiv #FromDiv #FromRightDiv, #OldGamesDiv #L2RightDiv #ToDiv, #OldGamesDiv #L2RightDiv #ToDiv #ToLeftDiv, #OldGamesDiv #L2RightDiv #ToDiv #ToRightDiv {
+    float: left;
 }
 
 #OldGamesDiv #L2RightDiv #FromDiv {
-	margin-right: 20px;
+    margin-right: 20px;
 }
 
 #OldGamesDiv #L2RightDiv #ToDiv {
-	float: left;
+    float: left;
 }
 
 #OldGamesDiv #ButtonsDiv {
-	text-align : center;
-	position :relative;
-	display : block;
-	height : 20px;
+    text-align: center;
+    position: relative;
+    display: block;
+    height: 20px;
 }
 
 #OldGamesDiv #ResultDiv {
-	display: block;
-	padding-bottom: 15px;
+    display: block;
+    padding-bottom: 15px;
 }
 
 #OldGamesDiv #ResultDiv #NoResultDiv {
-	text-align : center;
-	height : 114px;
-	padding-top	:	56px;
+    text-align: center;
+    height: 114px;
+    padding-top: 56px;
 }
 
 #OldGamesDiv #ResultDiv #TableDiv {
-	text-align : center;
-	padding-left : 22px;
+    text-align: center;
+    padding-left: 22px;
 }
 
 #OldGamesDiv #ResultDiv #TFootDiv {
-	height : 40px;
-	display : block;
+    height: 40px;
+    display: block;
 }
 
-#OldGamesDiv #oldgame_not_found{
-	width			: 464px;
-	border-style		: solid;
-	border-width		: 0px thin;
-	border-color		: #216778;
+#OldGamesDiv #oldgame_not_found {
+    width: 464px;
+    border-style: solid;
+    border-width: 0px thin;
+    border-color: #216778;
 }
 
 #OldGamesDiv #CloseDiv {
-	text-align: center;
-	padding-top: 15px;
+    text-align: center;
+    padding-top: 15px;
 }
+
